--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -10,16 +10,16 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
     <title>Borewell Tracking</title>
 </head>
 
 <body>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
@@ -29,8 +29,32 @@
 
     <!-- Navbar -->
     <nav class="navbar navbar-light bg-light">
-        <span class="navbar-brand mb-0 h1">Navbar</span>
+        <span class="navbar-brand mb-0 h1 text-center">Borewell Tracker</span>
     </nav>
+
+    <!-- Form -->
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
+            <form>
+                <div class="form-group">
+                    <label for="name">Enter your name</label>
+                    <input type="text" class="form-control" id="name" aria-describedby="emailHelp"
+                        placeholder="Enter your name">
+                </div>
+                <div class="form-group">
+                    <label for="name">Enter the location you're building borewell</label>
+                    <input type="text" class="form-control" id="location" aria-describedby="emailHelp"
+                        placeholder="Enter a location">
+                </div>
+
+                <button type="submit" class="btn btn-primary" id="submit-btn">Submit</button>
+        </div>
+        <div class="col-md-2"></div>
+    </div>
+    </form>
+    <!-- Reference of JavaScript file here -->
+    <script src="assets/app.js"></script>
 </body>
 
 </html>
