Coded logic to view all borewells are still opened

--- a/public/assets/index.html
+++ b/public/assets/index.html
@@ -52,6 +52,8 @@
         </div>
         <div class="col-md-2"></div>
     </div>
+    <!-- View button to view all borewells that are still open -->
+    <button type="submit" class="btn btn-primary" id="view-btn">View</button>
     </form>
     <!-- Reference of JavaScript file here -->
     <script src="assets/app.js"></script>
